<resources>
    <string name="app_name">UserManagingProject</string>

    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_password_repeat">Repeat your password</string>
    <string name="repeat_password_error">Password not equal</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="registration_success">Registration success</string>
    <string name="registration_success_message">You have successfully signed up and can now Continue</string>
    <string name="my_profile">My profile</string>
    <string name="common_error">Something was wrong!</string>
    <string name="not_specified">Not specified</string>
    <string name="password_mask">***********</string>
    <string name="address">Address</string>
    <string name="action_continue">Continue</string>

</resources>
