<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ua.lukyanov.usermanaging.ui.auth.registration.RegistrationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/contentContainer"
            app:goneUnless="@{!viewModel.isLoading}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="ua.lukyanov.usermanaging.ui.auth.registration.RegistrationFragment">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="124dp"
                    android:layout_height="124dp"
                    android:layout_marginTop="44dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_logo"/>

                <ua.lukyanov.usermanaging.views.BaseInputView
                    android:id="@+id/inputName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_activity_double"
                    android:layout_marginStart="@dimen/margin_activity_and_half"
                    android:layout_marginEnd="@dimen/margin_activity_and_half"
                    app:inputTitle="@string/name"
                    app:inputHint="@string/name_hint"
                    app:inputError="@{viewModel.nameErrorMessage}"
                    app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ua.lukyanov.usermanaging.views.BaseInputView
                    android:id="@+id/inputLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_activity_double"
                    android:layout_marginStart="@dimen/margin_activity_and_half"
                    android:layout_marginEnd="@dimen/margin_activity_and_half"
                    app:inputTitle="@string/email"
                    android:inputType="textEmailAddress"
                    app:inputError="@{viewModel.loginErrorMessage}"
                    app:layout_constraintTop_toBottomOf="@+id/inputName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ua.lukyanov.usermanaging.views.PasswordInputView
                    android:id="@+id/inputPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_view_small"
                    android:layout_marginStart="@dimen/margin_activity_and_half"
                    android:layout_marginLeft="@dimen/margin_activity_and_half"
                    android:layout_marginEnd="@dimen/margin_activity_and_half"
                    android:layout_marginRight="@dimen/margin_activity_and_half"
                    app:inputTitle="@string/password"
                    app:inputError="@{viewModel.passwordErrorMessage}"
                    app:layout_constraintTop_toBottomOf="@+id/inputLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ua.lukyanov.usermanaging.views.PasswordInputView
                    android:id="@+id/inputPasswordRepeat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_view_small"
                    android:layout_marginStart="@dimen/margin_activity_and_half"
                    android:layout_marginEnd="@dimen/margin_activity_and_half"
                    app:inputTitle="@string/repeat_password"
                    app:inputError="@{viewModel.passwordRepeatErrorMessage}"
                    app:layout_constraintTop_toBottomOf="@+id/inputPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:id="@+id/btnRegistration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyButtonFilledStyle"
                    android:layout_marginTop="@dimen/margin_activity_and_half"
                    android:layout_marginStart="@dimen/margin_activity_and_half"
                    android:layout_marginEnd="@dimen/margin_activity_and_half"
                    android:text="@string/registration"
                    app:layout_constraintTop_toBottomOf="@+id/inputPasswordRepeat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/MyButtonBorderStyle"
                    android:layout_marginTop="@dimen/margin_activity_double"
                    android:layout_marginStart="@dimen/margin_activity_and_half"
                    android:layout_marginLeft="@dimen/margin_activity_and_half"
                    android:layout_marginEnd="@dimen/margin_activity_and_half"
                    android:layout_marginRight="@dimen/margin_activity_and_half"
                    android:layout_marginBottom="@dimen/margin_activity_double"
                    android:text="@string/cancel"
                    app:layout_constraintTop_toBottomOf="@+id/btnRegistration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <include
            android:id="@+id/progressLoading"
            layout="@layout/layout_progress_loading"
            app:goneUnless="@{viewModel.isLoading}"/>

    </LinearLayout>


</layout>