<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ua.lukyanov.usermanaging.ui.auth.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ua.lukyanov.usermanaging.ui.auth.login.LoginFragment">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_logo"/>

        <ua.lukyanov.usermanaging.views.BaseInputView
            android:id="@+id/inputLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_activity_double"
            android:layout_marginStart="@dimen/margin_activity_and_half"
            android:layout_marginEnd="@dimen/margin_activity_and_half"
            app:inputTitle="@string/email"
            app:inputError="@{viewModel.loginErrorMessage}"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ua.lukyanov.usermanaging.views.PasswordInputView
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_view_small"
            android:layout_marginStart="@dimen/margin_activity_and_half"
            android:layout_marginEnd="@dimen/margin_activity_and_half"
            app:inputTitle="@string/password"
            app:inputError="@{viewModel.passwordErrorMessage}"
            app:layout_constraintTop_toBottomOf="@+id/inputLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyButtonFilledStyle"
            android:layout_marginTop="@dimen/margin_activity_and_half"
            android:layout_marginStart="@dimen/margin_activity_and_half"
            android:layout_marginEnd="@dimen/margin_activity_and_half"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/MyButtonBorderStyle"
            android:layout_marginTop="@dimen/margin_activity_double"
            android:layout_marginStart="@dimen/margin_activity_and_half"
            android:layout_marginEnd="@dimen/margin_activity_and_half"
            android:text="@string/registration"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:goneUnless="@{!viewModel.isLoading}"
            app:constraint_referenced_ids="imgLogo,inputLogin,inputPassword,btnLogin,btnRegistration" />

        <include
            android:id="@+id/progressLoading"
            layout="@layout/layout_progress_loading"
            app:goneUnless="@{viewModel.isLoading}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>